--- a/dados-pessoais/src/main/resources/application.properties
+++ b/dados-pessoais/src/main/resources/application.properties
@@ -1,1 +1,18 @@
 spring.application.name=dados-pessoais
+
+# Configuracoes do Banco de dados
+spring.sql.init.platform=h2
+spring.datasource.driver-class-name=org.h2.Driver
+# No Windows, cria o arquivo contatos-oficina-2024 no diret\u00f3rio do projeto
+# Para reiniciar o banco, apagar o arquivo e reiniciar a aplicacao Spring boot
+spring.datasource.url=jdbc:h2:file:~/dados-pessoais-2024
+spring.datasource.username=sa
+spring.datasource.password=
+
+spring.jpa.show-sql=true
+spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.open-in-view=false
+
+# Configuracoes especificas do banco H2
+spring.h2.console.enabled=true
+spring.h2.console.settings.web-allow-others=true
